--- a/app/src/main/res/layout/chat_bubble_text.xml
+++ b/app/src/main/res/layout/chat_bubble_text.xml
@@ -33,11 +33,12 @@
 		</androidx.cardview.widget.CardView>
 		<FrameLayout
 			android:id="@+id/message_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_gravity="start"
 				android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/menuView_d"
