--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
 		android:id="@+id/swipeLayout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
->
+		android:contentDescription="@string/pull_to_refresh">
 		<LinearLayout
 			android:id="@+id/swipeLayoutBody"
 			android:layout_width="match_parent"
