--- a/app/src/main/res/layout/chat_bubble_voice.xml
+++ b/app/src/main/res/layout/chat_bubble_voice.xml
@@ -2,12 +2,12 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
 	<LinearLayout
 		android:id="@+id/body"
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:paddingLeft="8dp"
 		android:paddingRight="8dp"
