--- a/app/src/main/res/layout/chat_bubble_media.xml
+++ b/app/src/main/res/layout/chat_bubble_media.xml
@@ -6,13 +6,11 @@
 	android:layout_height="wrap_content">
 	<LinearLayout
 		android:id="@+id/body"
-		android:layout_width="0dp"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:paddingLeft="8dp"
 		android:paddingRight="8dp"
 		android:orientation="horizontal"
-		app:layout_constraintWidth_max="wrap"
-		app:layout_constraintWidth_percent="0.75"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent">
@@ -35,8 +33,9 @@
 		</androidx.cardview.widget.CardView>
 		<LinearLayout
 			android:id="@+id/message_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
+			android:layout_weight="1"
 			android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/messageBG"
