--- a/app/src/main/res/layout/message_input_layout.xml
+++ b/app/src/main/res/layout/message_input_layout.xml
@@ -33,15 +33,19 @@
                         android:id="@+id/message_et"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:minHeight="48dp"
                         android:layout_marginLeft="7dp"
                         android:padding="@dimen/spacing_normal"
                         android:background="@android:color/transparent"
-                        android:gravity="center_vertical"
+                        android:gravity="top|start"
                         android:textSize="@dimen/text_size_large"
                         android:textColor="@color/md_theme_onBackground"
                         android:hint="@string/write_message"
                         android:textColorHint="@color/hint_text_color"
-                        android:maxHeight="180dp" />
+                        android:maxHeight="180dp"
+                        android:maxLines="6"
+                        android:scrollbars="vertical"
+                        android:inputType="textMultiLine|textCapSentences" />
         </LinearLayout>
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_sendMessage"
