--- a/app/src/main/res/layout/message_input_layout.xml
+++ b/app/src/main/res/layout/message_input_layout.xml
@@ -21,31 +21,42 @@
                 app:icon="@drawable/icons_2"
                 app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium" />
         <LinearLayout
-                android:id="@+id/message_input_outlined_round"
+                android:id="@+id/message_input_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:background="@drawable/bg_message_input"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:layout_weight="1">
-                <com.synapse.social.studioasinc.FadeEditText
-                        android:id="@+id/message_et"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="8dp"
+                android:background="@drawable/bg_message_input_container"
+                android:elevation="2dp">
+                <!-- Reply Preview Container (integrated inline) -->
+                <include layout="@layout/chat_reply_layout" />
+                <LinearLayout
+                        android:id="@+id/message_input_outlined_round"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:minHeight="48dp"
-                        android:layout_marginLeft="7dp"
-                        android:padding="@dimen/spacing_normal"
-                        android:background="@android:color/transparent"
-                        android:gravity="top|start"
-                        android:textSize="@dimen/text_size_large"
-                        android:textColor="@color/md_theme_onBackground"
-                        android:hint="@string/write_message"
-                        android:textColorHint="@color/hint_text_color"
-                        android:maxHeight="180dp"
-                        android:maxLines="6"
-                        android:scrollbars="vertical"
-                        android:inputType="textMultiLine|textCapSentences" />
+                        android:padding="3dp"
+                        android:background="@drawable/bg_message_input"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+                        <com.synapse.social.studioasinc.FadeEditText
+                                android:id="@+id/message_et"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:minHeight="48dp"
+                                android:layout_marginLeft="7dp"
+                                android:padding="@dimen/spacing_normal"
+                                android:background="@android:color/transparent"
+                                android:gravity="top|start"
+                                android:textSize="@dimen/text_size_large"
+                                android:textColor="@color/md_theme_onBackground"
+                                android:hint="@string/write_message"
+                                android:textColorHint="@color/hint_text_color"
+                                android:maxHeight="180dp"
+                                android:maxLines="6"
+                                android:scrollbars="vertical"
+                                android:inputType="textMultiLine|textCapSentences" />
+                </LinearLayout>
         </LinearLayout>
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_sendMessage"
